package animals;

import java.io.File;

public abstract class Animal {
    public abstract File showPicture();
}
