package ecosistems;

import animals.Animal;

public abstract class EcosystemFactory {
    public abstract Animal[] createEcosystem();
}
